<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL" Id="{7ed09a37-cf90-49ac-9e4a-5fe59e47274f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    {attribute 'pytmc' := 'pv: PLC:LFE:MOTION:ARB:01'}
    fbArbiter: FB_Arbiter(1);

    {attribute 'pytmc' := 'pv: PLC:LFE:MOTION:ARB:02'}
    fbArbiter2: FB_Arbiter(2);

    {attribute 'pytmc' := 'pv: PLC:LFE:MOTION:FFO:01'}
    {attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PMPS_FFO]^Channel 1^Output'}
    fbFastFaultOutput1: FB_HardwareFFOutput := (bAutoReset := TRUE, i_sNetID := '172.21.88.66.1.1');
    {attribute 'pytmc' := 'pv: PLC:LFE:MOTION:FFO:02'}
    fbFastFaultOutput1a: FB_HardwareFFOutput := (bAutoReset := TRUE, i_sNetID := '172.21.88.66.1.1');
    {attribute 'pytmc' := 'pv: PLC:LFE:MOTION:FFO:03'}
    fbFastFaultOutput1b: FB_HardwareFFOutput := (bAutoReset := TRUE, i_sNetID := '172.21.88.66.1.1');
    {attribute 'pytmc' := 'pv: PLC:LFE:MOTION:FFO:04'}
    fbFastFaultOutput1c: FB_HardwareFFOutput := (bAutoReset := TRUE, i_sNetID := '172.21.88.66.1.1');
    {attribute 'pytmc' := 'pv: PLC:LFE:MOTION:FFO:05'}
    fbFastFaultOutput1d: FB_HardwareFFOutput := (bAutoReset := TRUE, i_sNetID := '172.21.88.66.1.1');
    {attribute 'pytmc' := 'pv: PLC:LFE:MOTION:FFO:06'}
    {attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PMPS_FFO]^Channel 2^Output'}
    fbFastFaultOutput2: FB_HardwareFFOutput := (bAutoReset := TRUE, i_sNetID := '172.21.88.66.1.1');

    {attribute 'pytmc' := 'pv: PLC:LFE:MOTION:PMPS:ReqTrans'}
    rReqTrans AT %I*		: ARRAY [1..PMPS_GVL.AUX_ATTENUATORS] OF ST_PMPS_Attenuator_IO;
    {attribute 'pytmc' := 'pv: PLC:LFE:MOTION:PMPS:CurTrans'}
    rCurTrans AT %Q*		: ARRAY [1..PMPS_GVL.AUX_ATTENUATORS] OF ST_PMPS_Attenuator_IO;

    ePF1L0State: E_WFS_States;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>