<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="PRG_PF1L0_WFS" Id="{ffa57a7d-9d02-44af-b3b1-a3a307e22cab}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_PF1L0_WFS
VAR
    {attribute 'pytmc' := '
        pv: PF1L0:WFS
        io: io
    '}
    {attribute 'TcLinkTo' := '.fbThermoCouple1.bError := TIIB[PF1L0-EL3314]^TC Inputs Channel 1^Status^Error;
                              .fbThermoCouple1.bUnderrange := TIIB[PF1L0-EL3314]^TC Inputs Channel 1^Status^Underrange;
                              .fbThermoCouple1.bOverrange := TIIB[PF1L0-EL3314]^TC Inputs Channel 1^Status^Overrange;
                              .fbThermoCouple1.iRaw := TIIB[PF1L0-EL3314]^TC Inputs Channel 1^Value;
                              .fbThermoCouple2.bError := TIIB[PF1L0-EL3314]^TC Inputs Channel 2^Status^Error;
                              .fbThermoCouple2.bUnderrange := TIIB[PF1L0-EL3314]^TC Inputs Channel 2^Status^Underrange;
                              .fbThermoCouple2.bOverrange := TIIB[PF1L0-EL3314]^TC Inputs Channel 2^Status^Overrange;
                              .fbThermoCouple2.iRaw := TIIB[PF1L0-EL3314]^TC Inputs Channel 2^Value'}
    fbPF1L0: FB_WFS;
    stSiBP: ST_BeamParams := PMPS_GVL.cstFullBeam;
    stFoilBP: ST_BeamParams := PMPS_GVL.cstFullBeam;

    fbStateSetup: FB_StateSetupHelper;
    stDefault: ST_PositionState := (
        fVelocity := 1,
        bMoveOk := TRUE,
        bValid := TRUE
    );
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
fbStateSetup(stPositionState:=stDefault, bSetDefault:=TRUE);
fbStateSetup(stPositionState:=fbPF1L0.stOut, fPosition:=-13,         sPmpsState:='PF1L0:WFS-OUT');
fbStateSetup(stPositionState:=fbPF1L0.stTarget1, fPosition:=-93.77,  sPmpsState:='PF1L0:WFS-TARGET1');
fbStateSetup(stPositionState:=fbPF1L0.stTarget2, fPosition:=-79.402, sPmpsState:='PF1L0:WFS-TARGET2');
fbStateSetup(stPositionState:=fbPF1L0.stTarget3, fPosition:=-65.028, sPmpsState:='PF1L0:WFS-TARGET3');
fbStateSetup(stPositionState:=fbPF1L0.stTarget4, fPosition:=-50.652, sPmpsState:='PF1L0:WFS-TARGET4');
fbStateSetup(stPositionState:=fbPF1L0.stTarget5, fPosition:=-36.277, sPmpsState:='PF1L0:WFS-TARGET5');

fbPF1L0(
    fbArbiter := GVL.fbArbiter,
    fbFFHWO := GVL.fbFastFaultOutput1b,
    stYStage := Main.M31,
    stZStage := Main.M32,
    sDeviceName := 'PF1L0:WFS',
    sTransitionKey := 'PF1L0:WFS-TRANSITION',
    bEnableMotion := TRUE,
    bEnableBeamParams := TRUE,
    bEnablePositionLimits := TRUE,
    eEnumGet => GVL.ePF1L0State,
);]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>